until thesis section

--- a/index.html
+++ b/index.html
@@ -99,51 +99,65 @@
         </section>
         <!-- section information ends -->
         <section class="learning">
-            <h2>Start learning</h2>
-            <article class="Software"><img src="resources/images/course-software.jpg" alt="">
-                <h3>Software engineering</h3>
-                <p>COURSES</p>
-                <p>Web Develoment, Mobile Development, iOT, APIs</p>
-            </article>
-            <article class="computer-art"><img src="resources/images/course-computer-art.jpg" alt="">
-                <h3>Computer art</h3>
-                <p>COURSES</p>
-                <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
-            </article>
-            <article class="design"><img src="resources/images/course-design.jpg" alt="">
-                <h3>Design</h3>
-                <p>COURSES</p>
-                <p>User Experience Design, User Research, Visual Design</p>
-            </article>
-            <article class="data"><img src="resources/images/course-data.jpg" alt="">
-                <h3>Data</h3>
-                <p>COURSES</p>
-                <p>Data science, Big Data, SQL, Data Visualization</p>
-            </article>
-            <article class="business"><img src="resources/images/course-business.jpg" alt="">
-                <h3>Business</h3>
-                <p>COURSES</p>
-                <p>Product Development, Business Development, Startup </p>
-            </article>
-            <article class="marketing"><img src="resources/images/course-marketing.jpg" alt="">
-                <span>
-                    <h3>Marketing</h3>
+            <div class="learning-title">
+                <h2>Start learning</h2>
+            </div>
+            <div class="flex-container">
+                <article class="Software"><img src="resources/images/course-software.jpg" alt="">
+                    <h3>Software engineering</h3>
                     <p>COURSES</p>
-                    <p>Analytics, Content Marketing, Mobile Marketing</p>
-                </span>
-            </article>
+                    <p>Web Develoment, Mobile Development, iOT, APIs</p>
+                </article>
+                <article class="computer-art"><img src="resources/images/course-computer-art.jpg" alt="">
+                    <h3>Computer art</h3>
+                    <p>COURSES</p>
+                    <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+                </article>
+                <article class="design"><img src="resources/images/course-design.jpg" alt="">
+                    <h3>Design</h3>
+                    <p>COURSES</p>
+                    <p>User Experience Design, User Research, Visual Design</p>
+                </article>
+                <article class="data"><img src="resources/images/course-data.jpg" alt="">
+                    <h3>Data</h3>
+                    <p>COURSES</p>
+                    <p>Data science, Big Data, SQL, Data Visualization</p>
+                </article>
+                <article class="business"><img src="resources/images/course-business.jpg" alt="">
+                    <h3>Business</h3>
+                    <p>COURSES</p>
+                    <p>Product Development, Business Development, Startup </p>
+                </article>
+                <article class="marketing"><img src="resources/images/course-marketing.jpg" alt="">
+                    <span>
+                        <h3>Marketing</h3>
+                        <p>COURSES</p>
+                        <p>Analytics, Content Marketing, Mobile Marketing</p>
+                    </span>
+                </article>
+            </div>
         </section>
         <!-- section learning ends -->
         <section class="thesis">
-            <h2>Thesis Exhibit</h2>
+            <div class="thesis-title">
+                <h2>Thesis Exhibit</h2>
+            </div>
+
             <article class="video">
-                <video autoplay muted src="resources/videos/thesis.mp4"></video>
-                <span>
-                    <h2>Reimagine Urban</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint reiciendis commodi alias
-                        dignissimos tenetur voluptatem odio ipsum eos temporibus corrupti tempore quibusdam, animi
-                        veniam dicta placeat eum eveniet. Dolorem, officia?</p>
-                </span>
+                <div class="thesis-video">
+                    <video class="video" autoplay muted src="resources/videos/thesis.mp4">
+                    </video>
+                </div>
+                <div class="video-info">
+                    <span>
+                        <h2>Reimagine Urban</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint reiciendis commodi alias
+                            dignissimos tenetur voluptatem odio ipsum eos temporibus corrupti tempore quibusdam,
+                            animi
+                            veniam dicta placeat eum eveniet. Dolorem, officia?</p>
+                    </span>
+                </div>
+
             </article>
 
 
