--- a/index.html
+++ b/index.html
@@ -138,17 +138,16 @@
             </div>
         </section>
         <!-- section learning ends -->
-        <section class="thesis">
-            <div class="thesis-title">
+        <div class="thesis-title">
                 <h2>Thesis Exhibit</h2>
             </div>
-
+        <section class="thesis">
+            
+ <div class="thesis-video">
             <article class="video">
-                <div class="thesis-video">
+               
                     <video class="video" autoplay muted src="resources/videos/thesis.mp4">
                     </video>
-                </div>
-                <div class="video-info">
                     <span>
                         <h2>Reimagine Urban</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint reiciendis commodi alias
@@ -156,33 +155,45 @@
                             animi
                             veniam dicta placeat eum eveniet. Dolorem, officia?</p>
                     </span>
+
+
+            </article>
+            </div>
+            <div class="fisma-now">
+
+
+                <div class="fisma-article">
+                    <article class="fisma">
+                        <div class="fisma-img">
+                        <img src="resources/images/thesis-fisma.jpg" alt="">
+                    </div>
+                        <div class="fisma-info">
+                        <h3>Fisma: Design and Prototype</h3>
+                        <p>Designer showcase of new prototype product</p></div>
+                    </article>
                 </div>
-
-            </article>
-
-
-            <article class="fisma">
-                <img src="resources/images/thesis-fisma.jpg" alt="">
-                <h3>Fisma: Design and Prototype</h3>
-                <p>Designer showcase of new prototype product</p>
-            </article>
-            <article class="now-and-then">
-                <img src="resources/images/thesis-now-and-then.jpg" alt="">
-                <h3>Now and then</h3>
-                <p>Research study about New York</p>
-            </article>
-
-
+                <div class="now">
+                    <article class="now-and-then">
+                        <div class="now-img">
+                        <img src="resources/images/thesis-now-and-then.jpg" alt=""></div>
+                       <div class="now-info">
+                        <h3>Now and then</h3>
+                        <p>Research study about New York</p></div>
+                    </article>
+                </div>
+            </div> 
+            <!-- ends fisma-now div -->
         </section>
         <!-- secticon thesis ends   -->
         <footer>
+            <div class="footer">
             <article class="copyright">
                 <p>&copy; Colmar Academy. All rights reserved</p>
             </article>
             <article class="terms">
                 <p>Terms Privacy</p>
             </article>
-
+</div>
         </footer>
         <!-- footer ends -->
     </main>
