--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
                 </ul>
 
             </nav>
+            <nav class="mobile">
+               <ul> <li><img src="resources/images/ic-logo.svg" alt=""></li> </ul> 
+               <ul> <li><img src="resources/images/ic-on-campus.svg" alt=""></li> </ul> 
+               <ul> <li><img src="resources/images/ic-online.svg" alt=""></li> </ul> 
+               <ul> <li><img src="resources/images/ic-login.svg" alt=""></li> </ul> 
+            </nav>
         </div>
     </div>
     <!--  End header -->
