mobile version finish

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section class="information">
             <div class="information-span">
                 <article class="image">
-                    <img src="resources/images/information-main.jpg" alt="">
+                    <img src="resources/images/information-main.jpg" alt=""  >
                     <span class="text-info">
                         <h2>It doesn't hurt to keep practicing</h2>
                         <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo, dolorum voluptatem fuga
@@ -73,7 +73,8 @@
             <div class="information-data">
                 <article class="orientation-date border box">
                     <div class="info-img">
-                        <img src="resources/images/information-orientation.jpg" alt="">
+                        <img src="resources/images/information-orientation.jpg" alt="" class="img-desktop">
+                        <img src="resources/images/information-orientation-mobile.jpg" alt="" class="img-mobile">
                     </div>
                     <div class="info-box">
                         <h3>Orientation Date</h3>
@@ -83,7 +84,8 @@
                 </article>
                 <article class="our-campus border box">
                     <div class="info-img">
-                        <img src="resources/images/information-campus.jpg" alt="">
+                        <img src="resources/images/information-campus.jpg" alt="" class="img-desktop">
+                        <img src="resources/images/information-campus-mobile.jpg" alt="" class="img-mobile">
                     </div>
                     <div class="info-box">
                         <h3>Our Campus</h3>
@@ -93,7 +95,8 @@
                 </article>
                 <article class="guest-lecture border box">
                     <div class="info-img">
-                        <img src="resources/images/information-guest-lecture.jpg" alt="">
+                        <img src="resources/images/information-guest-lecture.jpg" alt="" class="img-desktop">
+                        <img src="resources/images/information-guest-lecture-mobile.jpg" alt="" class="img-mobile">
                     </div>
                     <div class="info-box">
                         <h3>Our guest lecture</h3>
@@ -109,32 +112,32 @@
                 <h2>Start learning</h2>
             </div>
             <div class="flex-container">
-                <article class="Software"><img src="resources/images/course-software.jpg" alt="">
+                <article class="Software"><img src="resources/images/course-software.jpg" alt="" class="img-desktop">
                     <h3>Software engineering</h3>
                     <p>COURSES</p>
                     <p>Web Develoment, Mobile Development, iOT, APIs</p>
                 </article>
-                <article class="computer-art"><img src="resources/images/course-computer-art.jpg" alt="">
+                <article class="computer-art"><img src="resources/images/course-computer-art.jpg" alt="" class="img-desktop">
                     <h3>Computer art</h3>
                     <p>COURSES</p>
                     <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
                 </article>
-                <article class="design"><img src="resources/images/course-design.jpg" alt="">
+                <article class="design"><img src="resources/images/course-design.jpg" alt="" class="img-desktop">
                     <h3>Design</h3>
                     <p>COURSES</p>
                     <p>User Experience Design, User Research, Visual Design</p>
                 </article>
-                <article class="data"><img src="resources/images/course-data.jpg" alt="">
+                <article class="data"><img src="resources/images/course-data.jpg" alt="" class="img-desktop">
                     <h3>Data</h3>
                     <p>COURSES</p>
                     <p>Data science, Big Data, SQL, Data Visualization</p>
                 </article>
-                <article class="business"><img src="resources/images/course-business.jpg" alt="">
+                <article class="business"><img src="resources/images/course-business.jpg" alt="" class="img-desktop">
                     <h3>Business</h3>
                     <p>COURSES</p>
                     <p>Product Development, Business Development, Startup </p>
                 </article>
-                <article class="marketing"><img src="resources/images/course-marketing.jpg" alt="">
+                <article class="marketing"><img src="resources/images/course-marketing.jpg" alt="" class="img-desktop">
                     <span>
                         <h3>Marketing</h3>
                         <p>COURSES</p>
@@ -154,7 +157,7 @@
                
                     <video class="video" autoplay muted src="resources/videos/thesis.mp4">
                     </video>
-                    <span>
+                    <span class="img-desktop">
                         <h2>Reimagine Urban</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint reiciendis commodi alias
                             dignissimos tenetur voluptatem odio ipsum eos temporibus corrupti tempore quibusdam,
@@ -173,7 +176,7 @@
                         <div class="fisma-img">
                         <img src="resources/images/thesis-fisma.jpg" alt="">
                     </div>
-                        <div class="fisma-info">
+                        <div class="fisma-info ">
                         <h3>Fisma: Design and Prototype</h3>
                         <p>Designer showcase of new prototype product</p></div>
                     </article>
