--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header">
         <div class="logo">
             <img src="resources/images/ic-logo.svg" alt="">
-            <h1>ColmarAcademy</h1>
+            <h1>Colmar</h1><h1 class="white">Academy</h1>
         </div>
         <div class="navigation-bar">
             <nav class="navigation ">
